--- a/pystagram/templates/users/login.html
+++ b/pystagram/templates/users/login.html
@@ -6,7 +6,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-login">로그인</button>
-        <a href="/users/signup/">Go to signup page</a>
+        <a href="{% url 'users:signup' %}">Go to signup page</a>
     </form>
 </div>
 {% endblock %}
