--- a/pystagram/templates/base_nav.html
+++ b/pystagram/templates/base_nav.html
@@ -1,5 +1,6 @@
 {% extends '_base.html' %}
 
 {% block base_content %}
+    {% include 'posts/nav.html' %}
     {% block content %}{% endblock %}
 {% endblock %}
